# embellish

./: .buildconfig  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  com.github.getnf.Embellish.desktop  com.github.getnf.Embellish.metainfo.xml  com.github.getnf.embellish.yml  devbox.json  embellish-gui  embellish-tui  getnf.go  go.mod  go.sum  io.github.getnf.embellish.desktop  io.github.getnf.embellish.metainfo.xml  io.github.getnf.embellish.yml  main.go  main_gui.go  main_terminal.go  meson.build
cmd/getnf/: main.go
data/: fonts  io.github.getnf.embellish.data.gresource.xml  io.github.getnf.embellish.desktop  io.github.getnf.embellish.desktop.in  io.github.getnf.embellish.gschema.xml  io.github.getnf.embellish.metainfo.xml  io.github.getnf.embellish.metainfo.xml.in  io.github.getnf.embellish.service  io.github.getnf.embellish.service.in  meson.build  style-dark.css  style.css
data/font-files/: font-names.csv  font-names.txt
data/icons/: meson.build
data/ui/: IconsPage.blp  IconsPage.ui  ImportDialog.blp  ShortcutsWindow.blp  ShortcutsWindow.ui  Window.blp  Window.ui
internal/db/: db.go
internal/gui/: actions.go  fonts.go  gui.go  headerbar.go  utils.go
internal/gui/resources/: about.ui  main.ui  ressources.go
internal/handlers/: gui.go  handlers.go  terminal.go  unix.go  windows.go
internal/handlers/fonts/: fonts.go
internal/handlers/os/: os.go
internal/tui/: tui.go
internal/types/: paths.go  paths_flatpak.go  paths_normal.go  types.go
internal/types/args/: args.go
internal/types/fonts/: fonts.go
internal/types/paths/: paths.go
internal/ui/gui/: fonts.go  gui.go  headerbar.go
internal/ui/gui/resources/: about.ui  main.ui  ressources.go  style.css
internal/ui/tui/: tui.go
internal/utils/: utils.go
po/: LINGUAS  POTFILES  ar.po  io.github.getnf.embellish.pot  meson.build  pt_BR.po
src/: add-font-dialog.blp  add_font_dialog.vala  application.js  application.vala  config.vapi  customFontsManager.js  data_translations.js  fontsManager.js  icons-page.blp  iconsPage.js  import-dialog.blp  importDialog.js  import_dialog.vala  installedFontsManager.js  io.github.getnf.embellish.js  io.github.getnf.embellish.src.gresource.xml  licencesManager.js  main.js  main.vala  meson.build  preview-dialog.blp  previewManager.js  preview_dialog.vala  shortcuts-dialog.blp  utils.js  versionManager.js  window.blp  window.js  window.vala
src/assets/: fonts  fonts.json  icons.csv  licences  style.css
src/managers/: custom_fonts.vala  fonts.vala  icons.vala  library.vala  licences.vala  preview.vala
src/modals/: font.vala  icon.vala
tools/: extract_data_strings.sh  subset-fonts.sh
